# tiny-steam-client

./: CMakeLists.txt  README.md  build.bat  build.sh
lib/win32/curl/: libcurl_a.lib
src/: AuthClient.hpp  BasicIO.hpp  SteamClient.hpp  SteamEncryptedChannel.hpp  WebApiHelper.hpp  argparser.hpp  tiny-steam-client.cpp
src/consts/: logonresult.hpp
src/proto/: encrypted_app_ticket.pb.cc  encrypted_app_ticket.pb.h  enums_clientserver.pb.cc  enums_clientserver.pb.h  steammessages_base.pb.cc  steammessages_base.pb.h  steammessages_clientserver.pb.cc  steammessages_clientserver.pb.h  steammessages_clientserver_2.pb.cc  steammessages_clientserver_2.pb.h  steammessages_clientserver_friends.pb.cc  steammessages_clientserver_friends.pb.h  steammessages_clientserver_login.pb.cc  steammessages_clientserver_login.pb.h
src/steam/: steamtypes.h
